# DPVO_AMBA

./: CHANGELOG.md  CMakeLists.txt  MODEL_OUTPUT_PATCHIFY_COMPARISON.md  Makefile  PATCHIFY_COMPARISON_README.md  README.md  compare_amba_outputs.py  compare_ba_outputs.py  compare_ba_step_by_step.py  compare_correlation_8x8.py  compare_correlation_outputs.py  compare_keyframe.py  compare_model_output.py  compare_onnx_outputs.py  compare_patchify.py  compare_reproject_all_edges.py  compare_reproject_intermediate.py  compare_reproject_outputs.py  compare_update_onnx_dpvo.py  compare_update_onnx_outputs.py  run_all_comparisons.py  test_update_onnx_inference.cpp  test_update_onnx_standalone.cpp
README/: BA_COMPARISON_CHECKLIST.md  BA_INPUT_FUNCTIONS_COMPARISON.md  BA_MATH_COMPARISON.md  BA_PYTHON_CPP_COMPARISON.md  COMPARE_ONNX_OUTPUTS.md  COMPUTE_CORRELATION_SINGLE_EXPLANATION.md  CORRELATION_COMPARISON.md  CORRELATION_FUNCTION_DETAILED_EXPLANATION.md  CORRELATION_VERIFICATION.md  DPVO_CODE_SUMMARY.md  DPVO_RUN_FLOW_COMPARISON.md  FIX_PANGOLIN_COMPILE_ERRORS.md  FIX_VISUALIZATION_ISSUES.md  GMAP_FMAP_SOURCE_EXPLANATION.md  ONNX_LINKING_FIX.md  ONNX_RUNTIME_DOCKER_INSTALL.md  ONNX_RUNTIME_IMPLEMENTATION_GUIDE.md  ONNX_RUNTIME_SETUP.md  PATCHIFY_VS_REPROJECTION_EXPLANATION.md  POINTS_VISUALIZATION_ISSUE.md  PYTHON_CPP_COMPARISON.md  PYTHON_VS_CPP_MATH_COMPARISON.md  REPROJECT_JACOBIAN_VERIFICATION.md  REPROJECT_VERIFICATION.md  UPDATE_MODEL_OUTPUT_SHAPES.md  VIEWER_DIAGNOSTIC.md  WEIGHT_CHANNEL_ANALYSIS.md
inc/: ba_file_io.hpp  ba_ops.hpp  bounding_box.hpp  correlation_file_io.hpp  correlation_kernel.hpp  dataStructures.h  detection_3d.hpp  dla_config.hpp  dpvo.hpp  dpvo_viewer.hpp  eigen_common.h  fnet.hpp  inet.hpp  json_log.hpp  main.hpp  net.hpp  patch_graph.hpp  patchify.hpp  point.hpp  projective_ops.hpp  se3.h  target_frame.hpp  update.hpp  update_file_io.hpp  update_onnx.hpp  utils.hpp  yolov8.hpp  yolov8_decoder.hpp  yolov8_onnx.hpp  yolov8_postproc.hpp
src/: ba.cpp  bounding_box.cpp  config_reader.cpp  correlation_bilinear_helpers.hpp  correlation_kernel.cpp  dpvo.cpp  dpvo_viewer.cpp  fnet.cpp  fnet_onnx.cpp  inet.cpp  inet_onnx.cpp  json_log.cpp  main.cpp  net.cpp  patch_graph.cpp  patchify.cpp  point.cpp  projective_ops.cpp  se3.cpp  target_frame.cpp  update.cpp  update_onnx.cpp  utils.cpp  yolov8.cpp  yolov8_decoder.cpp  yolov8_onnx.cpp
